# bexa

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.grok/skills/openspec-apply-change/: SKILL.md
.grok/skills/openspec-archive-change/: SKILL.md
.grok/skills/openspec-explore/: SKILL.md
.grok/skills/openspec-propose/: SKILL.md
.grok/skills/openspec-sync-specs/: SKILL.md
openspec/: config.yaml
src/bexa/: __init__.py  cli.py  config.py
src/bexa/accounts/: __init__.py  service.py
src/bexa/bot/: __init__.py  engine.py
src/bexa/connection/: __init__.py  factory.py  session.py
src/bexa/core/: __init__.py  exceptions.py  logging.py
src/bexa/execution/: __init__.py  guards.py  models.py  service.py  timing.py
src/bexa/market/: __init__.py  service.py
src/bexa/orders/: __init__.py  service.py
src/bexa/risk/: __init__.py  models.py  service.py
src/bexa/strategy/: __init__.py  base.py  candle_color.py  hold.py  models.py  registry.py
tests/unit/: test_bot_config.py  test_guards.py  test_strategy_risk.py  test_timing.py
